<resources>
    <string name="app_name">CovidPinBoard</string>

    <!-- Labels NavBar -->
    <string name="favorites_label">Favorites</string>
    <string name="results_label">Board</string>
    <string name="form_label">Add</string>

    <string name="search">Search</string>

    <!-- Date Formats -->
    <string name="today_pattern">Today at %s</string>
    <string name="tomorrow_pattern">Tomorrow at %s</string>
    <string name="date_time_pattern">%s at %s</string>

    <!-- Dialog -->
    <string name="title">Title</string>
    <string name="description_header">Description</string>
    <string name="place_header">Place</string>
    <string name="category_header">Category / Categories</string>
    <string name="target_header">Target</string>
    <string name="start_date_header">Start</string>
    <string name="end_date_header">End</string>
    <string name="organizer_header">Organizer</string>
    <string name="error_message">This event has no </string>

    <!-- Categories -->
    <string name="categories">Categories</string>
    <string name="sport">Sport</string>
    <string name="cook">Cook</string>
    <string name="music">Music</string>
    <string name="dance">Dance</string>
    <string name="theater">Theater</string>
    <string name="literature">Literature</string>
    <string name="cinema">Cinema</string>
    <string name="conference">Conference</string>
    <string name="interview">Interview</string>
    <string name="workshop">Workshop</string>
    <string name="formation">Formation</string>
    <string name="donation">Donation</string>
    <string name="crafts">Crafts</string>
    <string name="storytelling">Storytelling</string>
    <string name="others">Others</string>

    <!-- Targets -->
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="familiar">Familiar</string>
    <string name="families">Families</string>

    <!--AddForm-->
    <string name="addForm_TitleStatement">Add your pin</string>
    <string name="announcer">Announcer</string>
    <string name="title_form">Title</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="target">Target</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="place_tip">URL link, telephone, e-mail</string>

    <string name="date_start"> Starting date</string>
    <string name="date_end"> Ending date</string>
    <string name="time_start"> Starting time</string>
    <string name="time_end"> Ending time</string>

    <string name="chooseATarget">Choose a target</string>
    <string name="addButton">Add</string>
    <string name="pin_created_OK">Your pin was created successfully</string>
    <string name="pin_created_Fail">An error occurred while creating your pin</string>

    <!-- Filter -->
    <string name="category_filter">Category Filter</string>

    <!-- Form errors -->
    <string name="mandatory_field_error">This field is mandatory</string>
    <string name="target_error">A target should be specified</string>
    <string name="category_error">You should choose one category al least</string>
    <string name="dateTime_error">Incorrect date or time</string>
    <string name="description_error">Specify a proper description</string>

</resources>
