<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorites_fragment"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:orderInCategory="1"
        android:title="@string/favorites_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/list_fragment"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:orderInCategory="2"
        android:title="@string/results_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/form_fragment"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:orderInCategory="3"
        android:title="@string/form_label"
        app:showAsAction="always" />
</menu>