<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addForm_titleStatement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:text="@string/addForm_TitleStatement"
        android:textAlignment="viewStart"
        android:textSize="@dimen/default_titleFormSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/addForm_scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addForm_titleStatement">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_margin_16"
            android:layout_marginTop="@dimen/default_margin_16"
            android:layout_marginEnd="@dimen/default_margin_16"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addForm_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:maxLines="2"
                    android:textSize="@dimen/primary_l"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addForm_announcer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/announcer"
                    android:textSize="@dimen/primary_l" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addForm_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/place"
                    android:textSize="@dimen/primary_l" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addForm_startingDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:focusable="false"

                        android:hint="@string/date_start"
                        android:textSize="@dimen/primary_l" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addForm_startingTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_start_time"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/time_start"
                        android:textSize="@dimen/primary_l" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addForm_endingDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/date_end"
                        android:textSize="@dimen/primary_l" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addForm_endingTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_end_time"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/time_end"
                        android:textSize="@dimen/primary_l" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/addForm_targetSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:textSize="@dimen/primary_l" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/addForm_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_tag"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/categories"
                    android:inputType="text"
                    android:textSize="@dimen/primary_l" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addForm_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:textSize="@dimen/primary_l" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addForm_addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_16"
                android:layout_marginBottom="@dimen/default_margin_bottom"
                android:text="@string/addButton"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/default_titleFormSize" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progressbar_height"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>